--- a/package.json
+++ b/package.json
@@ -29,9 +29,15 @@
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.14.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "^1.42.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.6",
+    "gatsby-plugin-postcss": "^4.14.0",
+    "postcss": "^8.3.8",
+    "tailwindcss": "^2.2.16"
   }
 }
