--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.42.1"
   },
   "devDependencies": {
