--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alexislepresle",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "alexislepresle",
   "author": "alexislepresle",
   "keywords": [
@@ -24,13 +24,16 @@
     "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-mdx": "^2.14.0",
+    "gatsby-plugin-purgecss": "^6.1.1",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sass": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.14.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
