--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^4.10.0",
     "gatsby-plugin-google-analytics": "^4.10.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-fonts-with-attributes": "^1.0.8",
     "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-manifest": "^4.10.0",
     "gatsby-plugin-mdx": "^3.10.0",
