--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-source-filesystem": "^4.10.0",
     "gatsby-transformer-remark": "^5.10.0",
     "gatsby-transformer-sharp": "^4.10.0",
+    "gsap": "^3.10.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
