--- a/package.json
+++ b/package.json
@@ -5,47 +5,47 @@
   "author": "Alexis Lepresle <contact@alexislepresle.com>",
   "private": false,
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@splidejs/react-splide": "^0.6.20",
-    "@splidejs/splide": "^3.6.12",
-    "@typeform/embed-react": "^1.13.0",
-    "gatsby": "^4.10.0",
-    "gatsby-plugin-google-analytics": "^4.10.0",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
+    "@typeform/embed-react": "^2.17.0",
+    "gatsby": "^5.7.0",
+    "gatsby-plugin-google-analytics": "^5.7.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-fonts-with-attributes": "^1.0.8",
-    "gatsby-plugin-image": "^2.10.0",
-    "gatsby-plugin-manifest": "^4.10.0",
-    "gatsby-plugin-mdx": "^3.10.0",
-    "gatsby-plugin-purgecss": "^6.1.1",
-    "gatsby-plugin-react-helmet": "^5.14.0",
-    "gatsby-plugin-sass": "^5.10.0",
-    "gatsby-plugin-sharp": "^4.10.0",
-    "gatsby-plugin-sitemap": "^5.10.0",
+    "gatsby-plugin-image": "^3.7.0",
+    "gatsby-plugin-manifest": "^5.7.0",
+    "gatsby-plugin-mdx": "^5.7.0",
+    "gatsby-plugin-purgecss": "^6.2.1",
+    "gatsby-plugin-react-helmet": "^6.7.0",
+    "gatsby-plugin-sass": "^6.7.0",
+    "gatsby-plugin-sharp": "^5.7.0",
+    "gatsby-plugin-sitemap": "^6.7.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-source-filesystem": "^4.10.0",
-    "gatsby-transformer-remark": "^5.10.0",
-    "gatsby-transformer-sharp": "^4.10.0",
-    "gsap": "^3.10.3",
+    "gatsby-source-filesystem": "^5.7.0",
+    "gatsby-transformer-remark": "^6.7.0",
+    "gatsby-transformer-sharp": "^5.7.0",
+    "gsap": "^3.11.4",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.49.9"
+    "sass": "^1.58.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "gatsby-plugin-postcss": "^5.10.0",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "autoprefixer": "^10.4.13",
+    "gatsby-plugin-postcss": "^6.7.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
